# permute

./: .gitignore  Cargo.toml  build_arm64.sh  package-lock.json  readme.md  todo.md
audio-info/: Cargo.toml  test.sh
audio-info/src/: lib.rs  main.rs
docs/: index.html  style.css
permute-app/: .gitignore  LICENSE  package-lock.json  package.json  x64electroninstall.sh
permute-app/assets/: icon.icns
permute-app/assets/pkg-scripts/: postinstall
permute-app/release/app/: package-lock.json  package.json
permute-app/src/main/: IFileStat.ts  ipc.ts  main.ts  menu.ts  preload.js
permute-app/src/renderer/: App.css  App.tsx  AudioContext.tsx  AudioPlayer.tsx  BottomBar.tsx  Files.tsx  Output.tsx  PauseIcon.tsx  PlayIcon.tsx  Processor.tsx  ProcessorSummary.tsx  Processors.tsx  StopIcon.tsx  SystemMenu.tsx  TopBar.tsx  Welcome.tsx  displayTime.tsx  electron.d.ts  index.ejs  index.tsx  processorDescriptions.tsx  theme.tsx  usePermuteActions.ts
permute-app/src/renderer/icons/: EllipsisIcon.tsx  HamburgerIcon.tsx  PauseIcon.tsx  PlayIcon.tsx  ReverseIcon.tsx  StopIcon.tsx  TrimIcon.tsx
permute-app/src/types/: permute-node.d.ts
permute-core/: .gitignore  Cargo.toml  build.rs  build.sh  test.sh
permute-core/src/: audio_cache.rs  display_node.rs  files.rs  lib.rs  main.rs  osc.rs  permute_error.rs  permute_files.rs  process.rs  random_process.rs  rms_cache.rs
permute-core/src/processors/: cross.rs  delay_reverb.rs  filter.rs  gain_distortion.rs  mod.rs  modulation.rs  time_pitch.rs
permute-core/src/random_processors/: mod.rs  random_cross.rs  random_delay_verb.rs  random_filter.rs  random_gain_distortion.rs  random_modulation.rs  random_time_pitch.rs  utils.rs
permute-node/: .gitignore  Cargo.toml  build.rs  build.sh  package-lock.json  package.json  permute-node-0.1.0.tgz  test.js  tsconfig.json
permute-node/src/: index.ts  lib.rs  sharedstate.rs
permute-tauri/: index.html  package-lock.json  package.json
permute-tauri/src/: App.css  App.tsx  AudioContext.tsx  AudioPlayer.tsx  BottomBar.tsx  Files.tsx  Output.tsx  Processor.tsx  ProcessorSummary.tsx  Processors.tsx  TopBar.tsx  Welcome.tsx  bridge.ts  displayTime.tsx  main.tsx  processorDescriptions.tsx  types.ts
permute-tauri/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
permute-tauri/src-tauri/capabilities/: default.json
permute-tauri/src-tauri/icons/: icon.icns
permute-tauri/src-tauri/src/: commands.rs  main.rs  state.rs
permute-tauri/src/icons/: CloseIcon.tsx  DeleteIcon.tsx  FolderIcon.tsx  InfoIcon.tsx  PlayIcon.tsx  StopIcon.tsx  TrashIcon.tsx  TrimIcon.tsx
permute-ui/: .gitignore  Cargo.toml  index.js  index.node  package-lock.json  package.json
permute-ui/src/: index.ts  lib.rs  lib2.rs  sharedstate.rs
site/: index.html
src/: main.rs  process.rs  processing.rs  random_process.rs
