[package]
name = "audio-info"
version = "0.1.0"
authors = ["Jonny Wildey <jonnywildey@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sndfile = "0.0.4"
serde = { version = "1.0.134", features = ["derive"] }