[package]
name = "permute"
version = "0.1.0"
authors = ["Jonny Wildey <jonnywildey@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sndfile = "0.1.1"
structopt = "0.3.13"
hound = "3.4.0"
rand = "0.8.4"
serde = { version = "1.0.134", features = ["derive"] }
biquad = "0.4.1"
strum = { version = "0.23", features = ["derive"] }
lazy_static = "1.4.0"
audio-info = { path = "../audio-info" }
rayon = "1.8.1"
crossbeam-channel = "0.5"
rustfft = "6.1"