[package]
name = "permute-node"
version = "0.1.0"
authors = ["Jonny Wildey <jonnywildey@gmail.com>"]
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
permute = { path = "../permute-core" }
audio-info = { path = "../audio-info" }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.75"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]