[package]
name = "permute-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "permute_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
permute = { path = "../../permute-core" }
audio-info = { path = "../../audio-info" }
crossbeam-channel = "0.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
